--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,4 +32,14 @@
   #social {
     top: 72px;
   }
+
+  .col-3 p {
+    column-count: 2;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #navbar nav a {
+
+  }
 }
