--- a/css/responsive.css
+++ b/css/responsive.css
@@ -50,4 +50,13 @@
     margin-left: 0;
     float: none;
   }
+
+  .border-right {
+    border-right: 0;
+  }
+
+  #details div {
+    height: auto;
+    padding-bottom: 20px;
+  }
 }
