--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,3 +64,14 @@
     column-count: 1;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  #navbar nav a {
+    display: none;
+  }
+
+  #navar nav a.menu-icon {
+    display: block;
+    float: right;
+  }
+}
