--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,5 +73,8 @@
   #navar nav a.menu-icon {
     display: block;
     float: right;
+    font-size: 1.5em;
+    padding: 10px 20px;
+    width: auto;
   }
 }
