--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,7 +70,7 @@
     display: none;
   }
 
-  #navar nav a.menu-icon {
+  #navbar nav a.menu-icon {
     display: block;
     float: right;
     font-size: 1.5em;
